--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   },
   "dependencies": {
     "cookie-parser": "^1.4.6",
-    "express-session": "^1.17.3"
+    "express-session": "^1.17.3",
+    "mysql2": "^3.2.0"
   }
 }
