--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "express-session": "^1.17.3",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.2.0"
   }
 }
